--- a/config/database.yml
+++ b/config/database.yml
@@ -1,3 +1,5 @@
+<% require "#{Rails.root}/config/initializers/01_load_secret" %>
+
 # MySQL.  Versions 5.0+ are recommended.
 #
 # Install the MYSQL driver
